# ProblemSolve

./: CMakeLists.txt  Main.cc  ReadMe.md
src/: CMakeLists.txt  InputParser.cc  InputParser.h  Scale.cc  Scale.h
src/test/: BalanceTests.cc  CMakeLists.txt
src/test/data/: assignment_example.txt  assignment_example_changed_order.txt  forest.txt  root_no_addition_needed_simple_tree.txt  root_no_addition_needed_single_root.txt  root_no_addition_needed_tree.txt  tree.txt
